// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlaybackView replaces the loading state with direct-play recovery: direct playback recovery 1`] = `
<View
  role="main"
  style={
    {
      "backgroundColor": "#000000",
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Playing Arrival"
    allowsPictureInPicture={true}
    contentFit="contain"
    fullscreenOptions={
      {
        "enable": true,
      }
    }
    nativeControls={true}
    onFirstFrameRender={[Function]}
    onLayout={[Function]}
    onPictureInPictureStart={[Function]}
    onPictureInPictureStop={[Function]}
    player={[Native video player]}
    startsPictureInPictureAutomatically={true}
    style={
      {
        "flex": 1,
      }
    }
    testID="video"
  />
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "padding": 16,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "center",
            "borderRadius": 18,
            "borderWidth": 1,
            "gap": 16,
            "margin": "auto",
            "maxWidth": 520,
            "padding": 32,
          },
          {
            "backgroundColor": "#12140F",
            "borderColor": "#2B3024",
          },
        ]
      }
    >
      <Text
        accessibilityLiveRegion="assertive"
        style={
          [
            {
              "fontSize": 26,
              "fontWeight": "800",
            },
            {
              "color": "#F6F8EF",
            },
          ]
        }
      >
        Playback stopped
      </Text>
      <Text
        style={
          [
            {
              "fontSize": 16,
              "lineHeight": 24,
            },
            {
              "color": "#9CA391",
            },
          ]
        }
      >
        Playback could not continue on this device.
      </Text>
      <View
        accessibilityLabel="Return to details"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#C8F169",
              "borderColor": "#C8F169",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            undefined,
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#11150A",
              },
            ]
          }
        >
          Return to details
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`PlaybackView starts an authorized source without persistent caching and waits for the first frame: first frame ready 1`] = `
<View
  role="main"
  style={
    {
      "backgroundColor": "#000000",
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Playing Arrival"
    allowsPictureInPicture={true}
    contentFit="contain"
    fullscreenOptions={
      {
        "enable": true,
      }
    }
    nativeControls={true}
    onFirstFrameRender={[Function]}
    onLayout={[Function]}
    onPictureInPictureStart={[Function]}
    onPictureInPictureStop={[Function]}
    player={[Native video player]}
    startsPictureInPictureAutomatically={true}
    style={
      {
        "flex": 1,
      }
    }
    testID="video"
  />
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "padding": 16,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    pointerEvents="box-none"
    style={
      [
        {
          "padding": 16,
        },
        false,
        {
          "flexDirection": "column-reverse",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityLabel="Play on TV"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "minHeight": 56,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Play on TV
        </Text>
      </View>
      <View
        accessibilityLabel="Playback options"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "borderRadius": 24,
              "minHeight": 44,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Playback options
        </Text>
      </View>
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 24,
              "minHeight": 44,
              "minWidth": 96,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Back
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`PlaybackView starts an authorized source without persistent caching and waits for the first frame: starting direct playback 1`] = `
<View
  role="main"
  style={
    {
      "backgroundColor": "#000000",
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Playing Arrival"
    allowsPictureInPicture={true}
    contentFit="contain"
    fullscreenOptions={
      {
        "enable": true,
      }
    }
    nativeControls={true}
    onFirstFrameRender={[Function]}
    onLayout={[Function]}
    onPictureInPictureStart={[Function]}
    onPictureInPictureStop={[Function]}
    player={[Native video player]}
    startsPictureInPictureAutomatically={true}
    style={
      {
        "flex": 1,
      }
    }
    testID="video"
  />
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "additive",
      }
    }
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "padding": 16,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
  <RNCSafeAreaView
    edges={
      {
        "bottom": "additive",
        "left": "additive",
        "right": "additive",
        "top": "off",
      }
    }
    pointerEvents="box-none"
    style={
      [
        {
          "padding": 16,
        },
        false,
        {
          "flexDirection": "column-reverse",
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
          "justifyContent": "space-between",
        }
      }
    >
      <View
        accessibilityLabel="Play on TV"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "minHeight": 56,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Play on TV
        </Text>
      </View>
      <View
        accessibilityLabel="Playback options"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "borderRadius": 24,
              "minHeight": 44,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Playback options
        </Text>
      </View>
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": false,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hasTVPreferredFocus={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "borderRadius": 10,
              "borderWidth": 2,
              "flexDirection": "row",
              "gap": 8,
              "justifyContent": "center",
              "maxWidth": "100%",
              "paddingHorizontal": 24,
            },
            {
              "backgroundColor": "#12140F",
              "borderColor": "#2B3024",
              "minHeight": 48,
              "opacity": 1,
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 24,
              "minHeight": 44,
              "minWidth": 96,
            },
            null,
          ]
        }
      >
        <Text
          style={
            [
              {
                "flexShrink": 1,
                "fontSize": 16,
                "fontWeight": "800",
                "letterSpacing": 0.2,
                "textAlign": "center",
              },
              {
                "color": "#F6F8EF",
              },
            ]
          }
        >
          Back
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;
